# devboard-sdk

./: .gitignore  CLAUDE.md  CMakeLists.txt  GUIDE.md  LICENSE  README.md  carbon_esp32_instrument.yaml  debug-provisioning.md  profile.yaml  pyproject.toml  sdkconfig.defaults  test_carbon_integration.sh  test_concurrent.py  test_hislip_client.py  test_hislip_compliance.py  test_mdns.sh
components/carbon_instrument/: CMakeLists.txt  Kconfig  carbon_error_queue.c  carbon_instrument.c  carbon_param_parser.c  carbon_param_parser.h  carbon_registry.c  carbon_registry.h  carbon_response.c  hislip.h  hislip_server.c  mdns_debug.h  scpi_adc.c  scpi_gpio.c  scpi_parser.c  scpi_parser.h  scpi_standard.c  scpi_system.c  scpi_uart.c  scpi_watchdog.c  scpi_watchdog.h
components/carbon_instrument/include/: carbon_error_queue.h  carbon_instrument.h  carbon_response.h
examples/hello_world/: CMakeLists.txt  README.md
examples/hello_world/main/: CMakeLists.txt  hello_world_example.c
examples/watchdog_timeout/: CMakeLists.txt  test_watchdog.py
examples/watchdog_timeout/main/: CMakeLists.txt  watchdog_timeout_example.c
main/: CMakeLists.txt  Kconfig.projbuild  carbon_wifi.c  carbon_wifi.h  hislip.c  hislip_server.h  idf_component.yml  main.c  mdns_debug.c  mdns_service.c  mdns_service.h  scpi_adc.c  scpi_gpio.c  scpi_parser.c  scpi_parser.h  scpi_standard.c  scpi_uart.c
tools/: generate_profile.py
